2004-12-22  Paul Stevens <paul@nfg.nl>

	* check_dbmail_imapd.c, mime.c, rfcmsg.c, dbmail-message.c,
	dbmail-message.h: correctly handle both messages and messageparts as 
	parsed by mime_readheader.
	* mime.c (mime_readheader): removed redundant cruft after cleanup.
	
2004-12-21  Aaron Stone  <aaron@serendipity.cx>

	* dbmd5.c (makemd5): return NULL if passed NULL.
	* user.c (mkpassword): replaced two instances of strncat with
	null_strncpy, which handles NULL pointers with ease. This resolves
	bug #141.

2004-12-19  Paul Stevens <paul@nfg.nl>

	* check_dbmail_imapd.c, db.c, imap4.h, imaputil.c, lmtp.c, main.c,
	mime.c, mime.h: start refactoring of mime_readheader by introducing
	mime_fetch_headers.
	* check_dbmail_imapd.c, dbmail-message.c, dbmail-message.h, mime.c,
	rfcmsg.c: modify mime_readheader to use mime_fetch_headers for actual
	parsing.
	
2004-12-15  Paul Stevens <paul@nfg.nl>

	* dbmail-message.c, dbmail-message.h: abstracted message code a bit
	to handle mimeparts as well.
	* dbmail-imapsession.c, dbmail-imapsession.h, check_dbmail_imapd.c:
	fix in fetch code for octet-ranges.

2004-12-14  Paul Stevens <paul@nfg.nl>

	* main.c, lmtp.c, dbmail-message.c, dbmail-message.h: removed
	redundant whole_message_size parameter from split_message.
	* acinclude.m4, Makefile.am, configure.in, check_dbmail_imapd.c: added 
	unit-testing support using check.

2004-12-12  Paul Stevens <paul@nfg.nl>

	* imapcommands.c (_ic_copy): added transactional support
	* imapcommands.c: refactored several functions to remove duplicate
	code.

2004-12-10  Paul Stevens <paul@nfg.nl>

	* dbmail-imapsession.c, imapcommands.c: added full logging of imap
	server response.
	* mime.c (mime_readheader), list.c: several glib cleanups.
	* main.c, lmtp.c, header.c, dbmail-message.c: removed header.[ch]

2004-12-08  Paul Stevens <paul@nfg.nl>

	* dbmail-imapsession.c, dbmail-imapsession.h, imap4.h, imapcommands.c:
	converted bodyfetch item to GList to allow fetching of multiple body